<resources>
    <string name="app_name">Desk Track</string>
    <string name="icon_person">Person icon in login view</string>
    <string name="welcome">Welcome</string>
    <string name="cif">CIF</string>
    <string name="psw">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="space">\u0020</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
</resources>